--- a/Calculadora/index.html
+++ b/Calculadora/index.html
@@ -19,7 +19,7 @@
                     <button>CE</button>
                     <button>C</button>
                     <button>DEL</button>
-                    <button>DEL</button>
+                    <button>/</button>
                     <button class="number">7</button>
                     <button class="number">8</button>
                     <button class="number">9</button>
